--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# data
+data
+
+# video materials
+videos
+
 # external libraries
 
 # User-specific files
